--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
 		</plugins>
 	</build>
 	
-	 <repository>
+	<distributionManagement>
+	<repository>
          <id>internal.repo</id>
          <name>MyCo Internal Repository</name>
          <url>http://51.141.26.48:8081</url>
@@ -36,5 +37,6 @@
          <name>Your Snapshot Repository</name>
          <url>http://51.141.26.48:8081/repository/maven-public/</url>
     </snapshotRepository>
+	</distributionManagement>
 
 </project>
