--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 	</build>
 	
 	<distributionManagement>
+	<repository>
+         <id>internal.repo</id>
+         <name>MyCo Internal Repository</name>
+         <url>http://51.141.26.48:8081/repository/maven-public/</url>
+    </repository>
     <snapshotRepository>
          <id>Snapshot.repo</id>
          <name>Your Snapshot Repository</name>
