--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 	
 	<distributionManagement>
 	<repository>
-         <id>internal.repo</id>
+         <id>nexus</id>
          <name>MyCo Internal Repository</name>
          <url>http://51.141.26.48:8081/repository/maven-public/</url>
     </repository>
     <snapshotRepository>
-         <id>Snapshot.repo</id>
+         <id>nexus</id>
          <name>Your Snapshot Repository</name>
          <url>http://51.141.26.48:8081/repository/maven-public/</url>
     </snapshotRepository>
