--- a/pom.xml
+++ b/pom.xml
@@ -27,16 +27,11 @@
 	</build>
 	
 	<distributionManagement>
-	<repository>
-         <id>nexus</id>
-         <name>MyCo Internal Repository</name>
-         <url>http://51.141.26.48:8081/repository/maven-public/</url>
-    </repository>
-    <snapshotRepository>
-         <id>nexus</id>
-         <name>Your Snapshot Repository</name>
-         <url>http://51.141.26.48:8081/repository/maven-public/</url>
-    </snapshotRepository>
+		<repository>
+			<id>nexus</id>
+			<name>Releases</name>
+			<url>http://51.141.26.48:8081/repository/maven-releases</url>
+		</repository>
 	</distributionManagement>
 
 </project>
